--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.20.0",
-    "lucide-react": "^0.294.0"
+    "lucide-react": "^0.294.0",
+    "react-paystack": "^6.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.12",
